2023-02-05 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS, DEPENDS, BUILD, INSTALL: created spell, version 1.2.0