@@ -1,8 +1,0 @@
-local PCF_DIR="${INSTALL_ROOT}/usr/share/fonts/X11/misc" &&
-
-if [ ! -d "${PCF_DIR}" ]; then
-  mkdir -p "${PCF_DIR}"
-fi &&
-
-install -vm 0644 *.pcf.gz spectrum-fonts/*.pcf.gz "${PCF_DIR}" &&
-install -vm 0644 *.otb spectrum-fonts/*.otb "${PCF_DIR}"
