@@ -1,2 +1,6 @@
+2023-02-07 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD, Makefile: added Make-based build system
+	* INSTALL: removed, no longer needed
+
 2023-02-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS, DEPENDS, BUILD, INSTALL: created spell, version 1.2.0
